--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
   },
   "dependencies": {
     "@bradgarropy/next-google-analytics": "^1.0.2",
+    "@cloudflare/next-on-pages": "^1.13.0",
+    "@next/bundle-analyzer": "^15.0.2",
+    "debug": "^4.3.4",
     "framer-motion": "^11.3.28",
+    "glob": "^9.3.5",
     "next": "^14.2.5",
     "next-sitemap": "^4.2.3",
     "node-fetch": "^3.3.2",
@@ -22,17 +26,14 @@
     "react-responsive": "^10.0.0",
     "react-share": "^5.1.0",
     "sharethis-reactjs": "^1.6.0",
-    "@cloudflare/next-on-pages": "^1.13.0",
-    "debug": "^4.3.4",
-    "glob": "^9.3.5",
-    "uuid": "^9.0.0",
-    "tw-elements": "^2.0.0"
+    "tw-elements": "^2.0.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
     "cross-env": "^7.0.3",
     "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.4"
+    "tailwindcss": "^3.2.4",
+    "wrangler": "^3.84.1"
   }
 }
-
